feat: Phase 2 complete - Smart refresh control and search progress UI with full JSX

--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -429,8 +429,15 @@
     <script crossorigin src="/lib/react-dom.development.js"></script>
     <script src="/lib/babel.min.js"></script>
 
+    <!-- Application Context -->
+    <script type="text/babel" src="/components/AppContext.js"></script>
+
+    <!-- Phase 2 UI Components -->
+    <script type="text/babel" src="/components/refresh-control.js"></script>
+    <script type="text/babel" src="/components/search-progress.js"></script>
+
     <!-- Main Application -->
-    <script src="/app.js"></script>
+    <script type="text/babel" src="/app.js"></script>
 
 
 </body>
