--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -435,6 +435,7 @@
     <!-- Phase 2 UI Components -->
     <script type="text/babel" src="/components/refresh-control.js"></script>
     <script type="text/babel" src="/components/search-progress.js"></script>
+    <script type="text/babel" src="/components/settings-modal.js"></script>
 
     <!-- Main Application -->
     <script type="text/babel" src="/app.js"></script>
