--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -21,8 +21,8 @@
         }
 
         .toolbar {
-            background: #f8f9fa;
-            border-bottom: 1px solid #e5e7eb;
+            background: linear-gradient(to bottom, #e9e9e9, #d6d6d6);
+            border-bottom: 1px solid #c0c0c0;
             padding: 8px 12px;
             display: flex;
             align-items: center;
@@ -30,8 +30,10 @@
         }
 
         .toolbar-button {
-            background: #ffffff;
-            border: 1px solid #d1d5db;
+            background: linear-gradient(to bottom, #f0f0f0, #e0e0e0);
+            border: 1px solid #a0a0a0;
+            border-top: 1px solid #fff;
+            border-left: 1px solid #fff;
             padding: 6px 12px;
             border-radius: 3px;
             cursor: pointer;
@@ -39,25 +41,32 @@
             display: flex;
             align-items: center;
             gap: 4px;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.1);
         }
 
         .toolbar-button:hover {
-            background: #f3f4f6;
-            border-color: #9ca3af;
+            background: linear-gradient(to bottom, #f8f8f8, #e8e8e8);
         }
 
         .toolbar-button:active {
-            background: #e5e7eb;
+            background: linear-gradient(to bottom, #d0d0d0, #e0e0e0);
+            border: 1px solid #a0a0a0;
+            border-right: 1px solid #fff;
+            border-bottom: 1px solid #fff;
+            box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
         }
 
         .address-bar {
             background: white;
-            border: 1px solid #d1d5db;
+            border: 1px solid #a0a0a0;
+            border-top: 1px solid #fff;
+            border-left: 1px solid #fff;
             padding: 6px 8px;
             flex: 1;
             margin: 0 8px;
             font-size: 13px;
             border-radius: 3px;
+            box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
         }
 
         .file-list {
@@ -105,8 +114,8 @@
         }
 
         .status-bar {
-            background: #f8f9fa;
-            border-top: 1px solid #e5e7eb;
+            background: linear-gradient(to bottom, #e9e9e9, #d6d6d6);
+            border-top: 1px solid #c0c0c0;
             padding: 4px 12px;
             font-size: 12px;
             color: #6b7280;
@@ -136,7 +145,7 @@
             animation-delay: 4s;
         }
 
-        /* Futuristic login styles */
+        /* Futuristic login styles - kept with glass effect */
         .login-container {
             background: linear-gradient(135deg, rgba(59, 130, 246, 0.1) 0%, rgba(147, 51, 234, 0.1) 100%);
             backdrop-filter: blur(10px);
@@ -257,7 +266,7 @@
             box-shadow: 0 0 0 2px rgba(0,0,0,0.2);
         }
 
-        /* Theme Variations */
+        /* Theme Variations - with Windows-style enhancements */
         .theme-default {
             background: #f0f0f0;
         }
@@ -274,23 +283,34 @@
         }
 
         .theme-dark .toolbar {
-            background: #2d3748;
+            background: linear-gradient(to bottom, #404040, #303030);
             border-color: #1a202c;
         }
 
         .theme-dark .toolbar-button {
-            background: #4a5568;
-            border-color: #2d3748;
+            background: linear-gradient(to bottom, #505050, #404040);
+            border: 1px solid #606060;
+            border-top: 1px solid #707070;
+            border-left: 1px solid #707070;
             color: #e2e8f0;
         }
 
         .theme-dark .toolbar-button:hover {
-            background: #718096;
+            background: linear-gradient(to bottom, #606060, #505050);
+        }
+
+        .theme-dark .toolbar-button:active {
+            background: linear-gradient(to bottom, #303030, #404040);
+            border: 1px solid #606060;
+            border-right: 1px solid #202020;
+            border-bottom: 1px solid #202020;
         }
 
         .theme-dark .address-bar {
             background: #4a5568;
-            border-color: #2d3748;
+            border: 1px solid #606060;
+            border-top: 1px solid #707070;
+            border-left: 1px solid #707070;
             color: #e2e8f0;
         }
 
@@ -304,7 +324,7 @@
         }
 
         .theme-dark .status-bar {
-            background: #2d3748;
+            background: linear-gradient(to bottom, #404040, #303030);
             border-color: #1a202c;
             color: #a0aec0;
         }
@@ -319,7 +339,7 @@
         }
 
         .theme-blue .toolbar {
-            background: #90cdf4;
+            background: linear-gradient(to bottom, #c9e7f9, #a4d0f0);
             border-color: #63b3ed;
         }
 
@@ -337,7 +357,7 @@
         }
 
         .theme-green .toolbar {
-            background: #9ae6b4;
+            background: linear-gradient(to bottom, #d4f8e8, #a5e9c2);
             border-color: #68d391;
         }
 
@@ -430,6 +450,12 @@
     <script src="/lib/babel.min.js"></script>
 
     <!-- Main Application -->
+    <!-- Component Scripts - Load in dependency order -->
+    <script src="/components/LoginForm.js"></script>
+    <script src="/components/FileBrowser.js"></script>
+    <script src="/App.js"></script>
+    
+    <!-- Main Application Entry Point -->
     <script src="/app.js"></script>
 
 
