--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -456,8 +456,10 @@
     <!-- Main Application -->
     <!-- Component Scripts - Load in dependency order -->
     <script src="/components/LoginForm.js"></script>
+    <script src="/components/share-modal.js"></script>
+    <script src="/components/file-list.js"></script>
     <script src="/components/FileBrowser.js"></script>
-    
+
     <!-- Main Application (includes App component and initialization) -->
     <script src="/app.js"></script>
 
