--- a/src/frontend/public/admin.html
+++ b/src/frontend/public/admin.html
@@ -177,6 +177,16 @@
             border-color: rgba(255, 255, 255, 0.4);
         }
 
+        .form-control option {
+            background: rgba(30, 30, 40, 0.95);
+            color: white;
+            padding: 10px;
+        }
+
+        .form-control option:hover {
+            background: rgba(59, 130, 246, 0.3);
+        }
+
         .action-buttons {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -350,40 +360,9 @@
             cursor: pointer;
         }
 
-        .logout-btn {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: rgba(239, 68, 68, 0.3);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(239, 68, 68, 0.5);
-            border-radius: 10px;
-            padding: 12px 24px;
-            color: white;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 1rem;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            z-index: 1001;
-            cursor: pointer;
-        }
-
-        .logout-btn:hover {
-            background: rgba(239, 68, 68, 0.5);
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-        }
     </style>
 </head>
 <body>
-    <button class="logout-btn" onclick="logout()">
-        <span>🚪</span>
-        <span>Logout</span>
-    </button>
-
     <div class="admin-container">
         <div class="admin-header">
             <h1>📋 Admin Panel</h1>
@@ -728,6 +707,7 @@
             html += `<div class="form-group">
                 <label>Port:</label>
                 <input type="number" name="server.port" class="form-control" value="${config.server?.port || 9400}">
+                <p style="font-size: 0.85rem; opacity: 0.7; margin-top: 5px;">Server port number (requires restart after change)</p>
             </div></div>`;
 
             // File System section
@@ -759,8 +739,43 @@
 
             html += `<div class="form-group" style="margin-top: 15px;">
                 <label>JWT Secret:</label>
-                <input type="text" name="security.jwtSecret" class="form-control" value="${config.security?.jwtSecret || ''}" placeholder="Leave empty for default">
+                <input type="text" name="security.jwtSecret" class="form-control" value="${config.security?.jwtSecret === '[SET]' || config.security?.jwtSecret === '[DEFAULT]' ? '' : (config.security?.jwtSecret || '')}" placeholder="Leave empty for default">
                 <p style="font-size: 0.85rem; opacity: 0.7; margin-top: 5px;">⚠️ Changing this will invalidate all existing tokens</p>
+            </div></div>`;
+
+            // Share Links section
+            html += '<div class="config-section"><h3>🔗 Share Links Configuration</h3>';
+            html += `<div class="checkbox-group">
+                <input type="checkbox" name="shareLinks.enabled" id="shareLinksEnabled" ${config.shareLinks?.enabled === true ? 'checked' : ''}>
+                <label for="shareLinksEnabled" style="margin: 0; cursor: pointer;">Enable Share Links Feature</label>
+            </div>`;
+            html += `<div class="form-row" style="margin-top: 15px;">
+                <div class="form-group">
+                    <label>Default Expiration (seconds):</label>
+                    <input type="number" name="shareLinks.defaultExpiration" class="form-control" value="${config.shareLinks?.defaultExpiration || 86400}" min="60">
+                    <p style="font-size: 0.85rem; opacity: 0.7; margin-top: 5px;">86400 = 24 hours</p>
+                </div>
+                <div class="form-group">
+                    <label>Max Expiration (seconds):</label>
+                    <input type="number" name="shareLinks.maxExpiration" class="form-control" value="${config.shareLinks?.maxExpiration || 2592000}" min="60">
+                    <p style="font-size: 0.85rem; opacity: 0.7; margin-top: 5px;">2592000 = 30 days</p>
+                </div>
+            </div>`;
+            html += `<div class="form-row">
+                <div class="form-group">
+                    <label>Cleanup Interval (seconds):</label>
+                    <input type="number" name="shareLinks.cleanupInterval" class="form-control" value="${config.shareLinks?.cleanupInterval || 86400}" min="60">
+                    <p style="font-size: 0.85rem; opacity: 0.7; margin-top: 5px;">How often to clean expired links</p>
+                </div>
+                <div class="form-group">
+                    <label>Max Downloads Default:</label>
+                    <input type="number" name="shareLinks.maxDownloadsDefault" class="form-control" value="${config.shareLinks?.maxDownloadsDefault || 0}" min="0">
+                    <p style="font-size: 0.85rem; opacity: 0.7; margin-top: 5px;">0 = unlimited</p>
+                </div>
+            </div>`;
+            html += `<div class="checkbox-group">
+                <input type="checkbox" name="shareLinks.allowPasswordProtection" id="shareLinksPassword" ${config.shareLinks?.allowPasswordProtection === true ? 'checked' : ''}>
+                <label for="shareLinksPassword" style="margin: 0; cursor: pointer;">Allow Password Protection</label>
             </div></div>`;
 
             html += '</form>';
@@ -785,7 +800,8 @@
                 const config = {
                     server: {},
                     fileSystem: {},
-                    security: {}
+                    security: {},
+                    shareLinks: {}
                 };
 
                 // Process form data
@@ -799,7 +815,10 @@
                         } else if (input && input.type === 'number') {
                             config[section][field] = parseInt(value);
                         } else {
-                            config[section][field] = value;
+                            // Only set non-empty string values
+                            if (value && value.trim() !== '') {
+                                config[section][field] = value.trim();
+                            }
                         }
                     }
                 }
@@ -1021,14 +1040,6 @@
 
         function downloadLogs() {
             window.open('/server.log', '_blank');
-        }
-
-        // Logout function
-        function logout() {
-            if (confirm('Are you sure you want to logout?')) {
-                localStorage.removeItem('token');
-                window.location.href = '/';
-            }
         }
 
         // Get token from localStorage
